--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 </head>
 
 <body>
-  <!--<header>
-      <h1>VIP WORLD</h1>
-    </header>
-    -->
   <div class=header>
-    <img style="float:left" ; src="viplogo.png" alt="logo" width="150px" ; height="150px" ;>
+    <img style="float:left" ; src="viplogo-nobg.png" alt="logo" width="150px" ; height="150px" ;>
     <h1>VIP WORLD</h1>
   </div>
   <div>
@@ -30,19 +26,25 @@
       <a style="float: right" href="signup.html" target="_blank">Sign up</a>
     </nav>
   </div>
-  <div class="electimage i">
-    <img src="elcimg.png" alt="electronic items"><br>
-    <img src="electronics.jpg" alt="electronic items">
+
+  <div class="row">
+    <h1>Refrigerator</h1>
+    <div class="box"><img src="elcimg.png" alt="electronic items"></div>
+    <div class="box"><img src="electronics.jpg" alt="electronic items"></div>
   </div>
-  <div class="phones img">
-    <img width="33%" src="phone.jpg" alt="phone">
-    <img width="33%" src="phone2.jpg" alt="phone">
-    <img width="33%" src="phone3.jpg" alt="phone">
+
+  <div class="row">
+    <h1>Mobiles</h1>
+    <div class="box"><img src="phone.jpg" alt="phone"></div>
+    <div class="box"><img src="phone2.jpg" alt="phone"></div>
+    <div class="box"><img src="phone3.jpg" alt="phone"></div>
   </div>
-  <div class="headphone img">
-    <img src="headphone.jpg" alt="headphone">
-    <img src="headphone2.jpg" alt="headphone">
-    <img src="headphone3.jpg" alt="headphone">
+
+  <div class="row">
+    <h1>HeadPhones</h1>
+    <div class="box"><img src="headphone.jpg" alt="headphone"></div>
+    <div class="box"><img src="headphone2.jpg" alt="headphone"></div>
+    <div class="box"><img src="headphone3.jpg" alt="headphone"></div>
   </div>
 
   <footer>
