--- a/login.html
+++ b/login.html
@@ -30,13 +30,14 @@
             padding-bottom: 20px;
             text-align: center;
         }
+
     </style>
 
 </head>
 
 <body style="background-color: #B8B2B2;">
     <div class=header>
-        <img style="float:left" ; src="viplogo.png" alt="logo" width="150px" ; height="150px" ;>
+        <img style="float:left" ; src="viplogo-nobg.png" alt="logo" width="150px" ; height="150px" ;>
         <h1>VIP WORLD</h1>
     </div>
     <div>
