--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
   <div class=header>
-    <img style="float:left" ; src="viplogo-nobg.png" alt="logo" width="150px" ; height="150px" ;>
+    <img class="logo" style="float:left"; src="viplogo-nobg.png" alt="logo">
     <h1>VIP WORLD</h1>
   </div>
-  <div>
-    <nav class="navi">
+  <div class="navi">
+    <nav class="">
       <a href="index.html" target="_self">HOME</a>
       <a href="#">Search</a>
       <a href="#">Cart</a>
@@ -27,21 +35,26 @@
     </nav>
   </div>
 
+
+  <div class="row_head"><h1>Refrigerator</h1></div>
   <div class="row">
-    <h1>Refrigerator</h1>
     <div class="box"><img src="elcimg.png" alt="electronic items"></div>
     <div class="box"><img src="electronics.jpg" alt="electronic items"></div>
+    <div class="box"><img src="fridge1.jpg" alt="electronic items"></div>
+    <div class="box"><img src="fridge2.jpg" alt="electronic items"></div>
   </div>
 
+
+  <div class="row_head"><h1>Mobiles</h1></div>
   <div class="row">
-    <h1>Mobiles</h1>
     <div class="box"><img src="phone.jpg" alt="phone"></div>
     <div class="box"><img src="phone2.jpg" alt="phone"></div>
     <div class="box"><img src="phone3.jpg" alt="phone"></div>
   </div>
 
+
+  <div class="row_head"><h1>HeadPhones</h1></div>
   <div class="row">
-    <h1>HeadPhones</h1>
     <div class="box"><img src="headphone.jpg" alt="headphone"></div>
     <div class="box"><img src="headphone2.jpg" alt="headphone"></div>
     <div class="box"><img src="headphone3.jpg" alt="headphone"></div>
